@@ -258,10 +258,12 @@ An example:
   [connections]
   accountname = myaccount
   region = us-east-1
+  warehousename = compute
   username = frank
   password = fistula postmark bag
+  dbname = reporting
 
-The four variables that Sqitch currently reads are:
+The five variables that Sqitch currently reads are:
 
 =over
 
@@ -272,6 +274,10 @@ The four variables that Sqitch currently reads are:
 =item C<connections.password>
 
 =item C<connections.region>
+
+=item C<connections.warehousename>
+
+=item C<connections.dbname>
 
 =back
 
